# code-solver-ai

./: .coverage  .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  .windsurfrules  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agent_context.json  app.py  claude-review.md  config.yaml  debug_cache.py  debug_db_pattern.py  debug_detailed.py  debug_mongodb.py  debug_regex.py  git_branches.txt  git_log.txt  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
code-solver-ai/: README.md  app.py  config.yaml  main.py
core/: __init__.py  cache.py  classifier.py  coder.py  cpp_validator.py  exporter.py  interfaces.py  models.py  orchestrator.py  php_validator.py  pipeline.py  reasoner.py  ruby_validator.py  solver.py  solver_v2.py  types.py  validator.py
db/: history.db
docs/: demo-instructions.md  expansion-roadmap.md  performance-benchmarks.md  production-deployment.md  release-announcement.md  v1.0.0-release-plan.md  vscode-extension-plan.md
examples/: context_example.py  problems.md
models/: enhanced_fallback_client.py  fallback_client.py  ollama_client.py
src/: __init__.py  classifier.py  classifier_adapter.py  repair_engine.py  repair_engine_temp.py
templates/: cpp_prompts.py  php_prompts.py  ruby_prompts.py
tests/: test_auto_repair.py  test_batch_parser.py  test_cache.py  test_classifier.py  test_coder.py  test_cpp.py  test_database_mocking.py  test_executor.py  test_executor_v2.py  test_export_cleanup.py  test_fallback_client.py  test_helpers.py  test_logger.py  test_markdown.py  test_markdown_extended.py  test_multilang.py  test_ollama_client.py  test_php.py  test_pipeline_extended.py  test_prompts.py  test_repair_engine.py  test_repair_engine_fixed.py  test_ruby.py  test_smart_cache_v2.py  test_smart_cache_v3.py  test_solver.py  test_validator_mock_injection.py
utils/: __init__.py  auto_repair.py  cache_validator.py  db_mock_helper.py  exceptions.py  executor.py  executor_v2.py  logger.py  markdown.py  model_router.py  prompts.py  smart_cache.py  smart_cache_v2.py  smart_cache_v3.py  (+1 more)
(+24 files in other folders)
